# WIZnetPicoSDK_GIA

./: CMakeLists.txt  README.md  wiznet_pico_c_sdk_version.cmake
examples/: CMakeLists.txt
examples/client_sgp30/: CMakeLists.txt  client_sgp30.c
examples/client_sgp41/: CMakeLists.txt  client_sgp41.c  server.c
libraries/: CMakeLists.txt
libraries/ioLibrary_Driver/Ethernet/: wizchip_conf.c
libraries/ioLibrary_Driver/Internet/AAC/: AddressAutoConfig.c
libraries/ioLibrary_Driver/Internet/DHCP6/: dhcpv6.c
port/: CMakeLists.txt
port/mbedtls/inc/: ssl_config.h
